# GeneInsight

./: CMakeLists.txt  README.md  Ribosomal.fasta  dna_analyzer.cpp  dna_analyzer.h  mainwindow.cpp  mainwindow.h  ribosome.fasta
